--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
     <title>Img y Figure</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
 </head>
 <body>
-    
+    <main>
+        <section>
+
+            <figure>
+
+                <img src="./img/img1.jpg" alt="Imagen de hoja">
+
+
+            </figure>
+        </section>
+    </main>
 </body>
 </html>
