--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <figure>
 
                 <img src="./img/img1.jpg" alt="Imagen de hoja">
+                <figcaption>Imagen de hoja</figcaption>
 
 
             </figure>
